# SCUDO-MMinDL

./: .gitignore  LICENSE  README.md  exam_topics.md  logbook.md  pyproject.toml  references.md  requirements.txt
2024-2025/: references.md
2024-2025/notebooks/: 03-binary_logistic_regression.ipynb  06-python_classes.ipynb  07-building_a_library.ipynb  08-testing_the_library.ipynb
dl_rnn_lstm/: layers.py  losses.py  optimizers.py
mydl/: architecture.py  layers.py  losses.py
notebooks/: 01-linear_regression.py  01-linear_regression_house_prices.ipynb  02-linear_regression.py  02-using_MNIST.ipynb  02-using_MNIST.py  03-binary_logistic_regression.py  03-using_MNIST.py  04-KL.py  04-multiclass_logistic_regression.ipynb  04-multiclass_logistic_regression.py  05-binary_logistic_regression.py  05-gradient_descent.ipynb  06-multiclass_logistic_regression.py  06-python_classes.py  07-building_a_library.ipynb  07-building_a_library.py  07-gradient_descent.py  08-python_classes.py  08-testing_the_library.ipynb  09-regression_bike_data.ipynb  09-regression_bike_data.py  10-mydl_on_MNIST.ipynb  10-mydl_on_MNIST.py  11-universal_approximation_theorem.ipynb  binary_logistic_regression.py  gradient_descent.py  mydl_on_MNIST.py  regression_bike_data.py  risk.py  style.css  testing_the_library.py  universal_approximation_theorem.py
notebooks/__marimo__/: 01-linear_regression.html  02-linear_regression.html  03-using_MNIST.html  04-KL.html  06-multiclass_logistic_regression.html  07-gradient_descent.html  KL.html  binary_logistic_regression.html  gradient_descent.html  risk.html  (+6 more)
(+11 files in other folders)
